fix: Added spacing between homepage sections for widths under 1300px to prevent   overlaps.

--- a/app/Components/CalculatorSection/CalculatorSection.module.scss
+++ b/app/Components/CalculatorSection/CalculatorSection.module.scss
@@ -76,7 +76,7 @@
   color: #545454;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .calculatorSectionWrapper {
     height: auto;
     min-height: 100svh;
