--- a/app/Components/ShoppingItem/ShoppingItem.module.scss
+++ b/app/Components/ShoppingItem/ShoppingItem.module.scss
@@ -1,6 +1,6 @@
 .shoppingItemContianer {
   width: 100%;
-  max-width: 347px;
+  max-width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
